Fix(header): Fix toggle on mobile

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -156,4 +156,8 @@ header {
 		transform: translate(-50%, -5px) rotate(-90deg);
 		border-radius: 20px 0 0 20px;
 	}
+
+	@include mobile-only {
+		display: none;
+	}
 }
